# delongi-tank

./: .agent.md  .gitignore  CHANGELOG.md  CMakeLists.txt  PROJECT.md  README.md  README_OTA_SAFETY.md  activate-esp-idf.ps1  flash.md  idf_component.yml  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32
.github/: copilot-instructions.md
.github/agents/flash/: flash.ps1
archive/phase3-reference/: CMakeLists.txt.phase3  PHASE3_DELIVERY_SUMMARY.md  PHASE3_INTEGRATION_GUIDE.md  PHASE3_TEST_GUIDE.md  README.md  http_handlers.c  main_phase3.c  sdkconfig.old  wifi_net.c
components/main/: CMakeLists.txt  main.c
esp-idf-component-safe-ota/: CMakeLists.txt  README.md
esp-idf-component-safe-ota/components/safe_ota_manager/: CMakeLists.txt  safe_ota_manager.c  safe_ota_manager.h
include/: config.h  version.h  version.h.in
tools/: build-and-commit.ps1  build-simple.ps1  flash-mode.ps1  increment_build.py
